public class study {
    /**
     * 原型设计模式
     * 你有一家店，想要开另一家连锁店，其中好多东西都是一样的
     * 你不想重复设置，但是又不能直接拿来用，他们有一些不同之处
     * 你就需要原型设计模式，clon克隆你的原数据
     */

}
