package 设计模式.工厂模式;

public class Android implements OS{
    public void spec(){
        System.out.println("I am Android");
    }
}
