package 设计模式.工厂模式;

public class IOs implements OS{
    public void spec(){
        System.out.println("I am IOs");
    }
}
